# GestureFlow

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
controls/: audio.py  base.py  browser.py  dispatcher.py  media.py  scroll.py
gestures/: base.py  dynamic_gestures.py  features.py  motion.py  recognizer.py  state_machine.py  static_gestures.py
tests/: _factories.py  test_actions.py  test_async_hand_tracker.py  test_detectors.py  test_dynamic_gestures.py  test_features.py  test_motion.py  test_overlay.py  test_stability.py  test_stage_timer.py
tools/: diagnose_swipe.py
ui/: overlay.py
utils/: logger.py  stage_timer.py  timers.py
vision/: async_hand_tracker.py  camera.py  hand_tracker.py
